<?xml version="1.0"?>
<package>

	<name>kacanopen</name>
	<version>0.1.0</version>
	<description>KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++</description>
	<maintainer email="thomas.keh@student.kit.edu">Thomas Keh</maintainer>
	<author email="thomas.keh@student.kit.edu">Thomas Keh</author>
	<license>BSD</license>
	<url type="website">https://gitlab.ira.uka.de/thomaskeh/kacanopen/tree/master</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>  
	<run_depend>roscpp</run_depend>
	<run_depend>message_runtime</run_depend>

	<!-- <build_depend>message_generation</build_depend> -->

</package>
